# squishy-rs

./: Cargo.toml  README.md
.github/workflows/: release.yaml
squishy/: Cargo.toml  README.md
squishy-cli/: Cargo.toml  README.md
squishy-cli/src/: appimage.rs  cli.rs  common.rs  main.rs
squishy/src/: appimage.rs  error.rs  lib.rs
src/: error.rs  lib.rs
