[package]
name = "squishy-cli"
description = "A simple CLI tool to work with SquashFS files"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true

[[bin]]
name = "squishy"
path = "src/main.rs"

[dependencies]
squishy = { path = "../squishy", version = "0.1.0" }
clap = { version = "4.5.20", features = ["cargo", "derive"] }
goblin = { version = "0.9.2", default-features = false, features = ["elf32", "elf64", "endian_fd", "std"] }
