[package]
name = "squishy-cli"
description = "A simple CLI tool to work with SquashFS files"
version = "0.3.1"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true

[[bin]]
name = "squishy"
path = "src/main.rs"

[dependencies]
squishy = { path = "../squishy", version = "0.3.1", features = ["appimage", "rayon"] }
clap = { version = "4.5.20", features = ["cargo", "derive"] }
rayon = "1.10.0"
