[package]
name = "squishy"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
name = "squishy"
path = "src/lib.rs"

[features]
default = []
rayon = ["dep:rayon"]

[dependencies]
backhand = "0.18.0"
rayon = { version = "1.10.0", optional = true }
thiserror = "2.0.0"
