[package]
name = "squishy"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
name = "squishy"
path = "src/lib.rs"

[features]
default = []
appimage = ["goblin", "rayon"]
rayon = ["dep:rayon"]

[dependencies]
backhand = "0.18.0"
goblin = { version = "0.9.2", default-features = false, features = ["elf32", "elf64", "endian_fd", "std"], optional = true }
rayon = { version = "1.10.0", optional = true }
thiserror = "2.0.0"
